--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +21,115 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fn-m4-k7H">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple-logo-old" translatesAutoresizingMaskIntoConstraints="NO" id="vnx-DQ-QoZ">
+                                        <rect key="frame" x="67" y="11" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="IRb-ul-wru"/>
+                                            <constraint firstAttribute="width" constant="240" id="MZL-hM-pf5"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="vnx-DQ-QoZ" firstAttribute="centerY" secondItem="4fn-m4-k7H" secondAttribute="centerY" id="1yg-Xy-nha"/>
+                                    <constraint firstAttribute="height" constant="150" id="BPL-lP-Jqu"/>
+                                    <constraint firstItem="vnx-DQ-QoZ" firstAttribute="centerX" secondItem="4fn-m4-k7H" secondAttribute="centerX" id="Nv7-M7-1vs"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2qz-ic-GKB">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="106-Dd-gAA">
+                                        <rect key="frame" x="8" y="8" width="359" height="59"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="106-Dd-gAA" firstAttribute="leading" secondItem="2qz-ic-GKB" secondAttribute="leading" constant="8" id="CIL-lE-e0E"/>
+                                    <constraint firstAttribute="bottom" secondItem="106-Dd-gAA" secondAttribute="bottom" constant="8" id="ZVa-aI-Rvb"/>
+                                    <constraint firstAttribute="height" constant="75" id="daD-O4-Ig6"/>
+                                    <constraint firstAttribute="trailing" secondItem="106-Dd-gAA" secondAttribute="trailing" constant="8" id="hf0-1p-kGt"/>
+                                    <constraint firstItem="106-Dd-gAA" firstAttribute="top" secondItem="2qz-ic-GKB" secondAttribute="top" constant="8" id="l3a-qM-0S4"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99r-QG-0o1">
+                                <rect key="frame" x="16" y="170" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="MWN-Sm-qHs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eh4-rf-MTa">
+                                <rect key="frame" x="113" y="230" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.27242389321327209" green="0.39335969090461731" blue="0.67140072584152222" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="GIq-by-bx8"/>
+                                    <constraint firstAttribute="width" constant="150" id="j5g-gg-Lxh"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BS3-LN-3HP">
+                                <rect key="frame" x="46" y="420" width="283" height="117"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dmk-oa-HMe">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aza-Fp-wUx">
+                                        <rect key="frame" x="0.0" y="40" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6e-pW-UbE">
+                                        <rect key="frame" x="0.0" y="80" width="283" height="37"/>
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <state key="normal" title="Sign in">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2qz-ic-GKB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="06d-Nr-QrN"/>
+                            <constraint firstItem="eh4-rf-MTa" firstAttribute="top" secondItem="99r-QG-0o1" secondAttribute="bottom" constant="40" id="BPb-Ab-U5n"/>
+                            <constraint firstAttribute="trailing" secondItem="4fn-m4-k7H" secondAttribute="trailing" id="Bde-Nm-Ycr"/>
+                            <constraint firstItem="BS3-LN-3HP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="D4o-Dw-fOo"/>
+                            <constraint firstAttribute="trailing" secondItem="2qz-ic-GKB" secondAttribute="trailing" id="QLg-zy-6fZ"/>
+                            <constraint firstItem="4fn-m4-k7H" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="U47-7O-UW3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2qz-ic-GKB" secondAttribute="bottom" id="ZTI-59-Vtq"/>
+                            <constraint firstItem="99r-QG-0o1" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hPW-2C-ZRD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BS3-LN-3HP" secondAttribute="trailing" constant="30" id="iuE-0J-i3c"/>
+                            <constraint firstItem="99r-QG-0o1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="m2a-0o-Q0I"/>
+                            <constraint firstItem="BS3-LN-3HP" firstAttribute="top" secondItem="eh4-rf-MTa" secondAttribute="bottom" constant="40" id="mLM-PV-upv"/>
+                            <constraint firstItem="4fn-m4-k7H" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tMR-Q2-Bss"/>
+                            <constraint firstItem="99r-QG-0o1" firstAttribute="top" secondItem="4fn-m4-k7H" secondAttribute="bottom" constant="20" id="wKG-TI-ecZ"/>
+                            <constraint firstItem="eh4-rf-MTa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xGT-bh-bgB"/>
+                            <constraint firstItem="BS3-LN-3HP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xpc-2i-dwu"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="apple-logo-old" width="1000" height="1049"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
